--- a/lighthouse-core/report/v2/report-styles.css
+++ b/lighthouse-core/report/v2/report-styles.css
@@ -25,11 +25,11 @@
   --expandable-indent: 20px;
   --secondary-text-color: #565656;
   /*--accent-color: #3879d9;*/
-  --fail-color: #df332f;
-  --pass-color: #2b882f;
+  --fail-color: hsl(1, 73%, 45%);
+  --average-color: hsl(31, 100%, 45%); /* md orange 800 */
+  --pass-color: hsl(139, 70%, 30%);
   --informative-color: #0c50c7;
   --manual-color: #757575;
-  --average-color: #ef6c00; /* md orange 800 */
   --warning-color: #ffab00; /* md amber a700 */
   --report-border-color: #ccc;
   --report-secondary-border-color: #ebebeb;
