--- a/lighthouse-core/report/v2/report-styles.css
+++ b/lighthouse-core/report/v2/report-styles.css
@@ -726,13 +726,47 @@ span.lh-node:hover {
   display: flex;
   justify-content: center;
   overflow-x: hidden;
-  padding: var(--section-padding);
+  padding: var(--section-padding) var(--section-padding) calc(var(--section-padding) * 3);
   border-bottom: 1px solid var(--report-border-color);
+  position: relative;
 }
 .lh-scores-header__solo {
   padding: 0;
   border: 0;
 }
+
+.lh-scorescale {
+  position: absolute;
+  right: var(--section-padding);
+  bottom: var(--section-padding);
+  color: #757575;
+}
+
+span.lh-scorescale-range {
+  margin-left: 10px;
+}
+
+.lh-scorescale-range::before {
+  content: '';
+  width: var(--body-font-size);
+  height: calc(var(--body-font-size) * .60);
+  border-radius: 4px;
+  display: inline-block;
+  margin: 0 5px;
+}
+
+.lh-scorescale-range--pass::before {
+  background-color: var(--pass-color);
+}
+
+.lh-scorescale-range--average::before {
+  background-color: var(--average-color);
+}
+
+.lh-scorescale-range--fail::before {
+  background-color: var(--fail-color);
+}
+
 
 .lh-categories {
   width: 100%;
